# python-flask/swagger_server/models/__init__.py
@@ -3,4 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.cloud_preferences import CloudPreferences
 from swagger_server.models.tosca_template import ToscaTemplate
